<resources>
    <string name="app_name">Budget Wise : Expense Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monthlyDuration">%s %s</string>
    <string name="monthlyExpensePercentage">%s</string>
    <string name="amountInRupee">₹%s</string>
    <string name="userBudget">/₹%s</string>
    <string name="transactionTypeName">on %s</string>
    <string name="transactionTypeCount">%d Expenses</string>
    <string name="transactionTypeCountSingular">%d Expense</string>
    <string name="devName">PuruPanda</string>
    <string name="devBio">Hey, I am Purab Modi, developer of this application. You can change this information by clicking on the edit button. Happy Budgeting!</string>
    <string name="percentageBudget">%s%% of the budget</string>
    <string name="changeDateInstruction">Note: To change the Transaction date, Click on the Calender icon</string>
    <string name="totalValue">Total: ₹%s</string>
    <string name="paidViaString">%s</string>
    <string name="afternoon">Good Afternoon!</string>
    <string name="evening">Good Evening!</string>splas
    <string name="night">Good Night!</string>
    <string name="morning">Good Morning!</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_expense_summary">See Expense Summary</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="total_balance">Current Balance</string>
    <string name="dev_name">PuruPanda</string>
    <string name="transaction_date">Date: %s</string>
    <string name="introDesc1">Manage all your expenses and income in one place and get a clear picture of your financial health.</string>
    <string name="introTitle1">Get Your Money \nUnder Control</string>
    <string name="introTitle2"><![CDATA[Track Expenses &\n Budget Accordingly]]></string>
    <string name="introDesc2">Track and record your expenses and income easily and set budget to control your balance.</string>
    <string name="introDesc3">Set your budget and track your expenses to stay in control of your finances with BudgetWise.</string>
    <string name="introTitle3">Stay wise\n with BudgetWise</string>
    <string name="getStarted">Get Started</string>
    <string name="next">Next</string>
</resources>