<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="8dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/transactionFrameLayout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/circle_image_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/transactionTypeIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/ic_entertainment"
                 />

        </FrameLayout>

        <TextView
            android:id="@+id/transactionTypeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactionTypeName"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/transactionFrameLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/transactionTypeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactionTypeCount"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="@font/autour_one"
            app:layout_constraintStart_toEndOf="@id/transactionFrameLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/transactionTypeAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amountInRupee"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="@font/autour_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>