<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    android:scrollbars="none"
    tools:context=".fragments.mainScreen.MainScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryBackground">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/waveSquare"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/sqaure_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/wave"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="-10dp"
            android:src="@drawable/ic_wave"
            android:tint="@color/primary_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/waveSquare" />


        <!--welcome back view-->
        <TextView
            android:id="@+id/greetingMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="Welcome Back!"
            android:textColor="@color/buttonColor"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/userName"
            app:layout_constraintTop_toTopOf="parent" />
        <!--username view -->
        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/autour_one"
            android:gravity="center"
            android:text="PuruPanda"
            android:textColor="@color/buttonColor"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_wolverine"
            app:drawableTint="@color/buttonColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/greetingMsg"
            tools:layout_editor_absoluteY="56dp" />
        <!--notification bell-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="27dp"
            android:src="@drawable/ic_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/userName"
            app:tint="@color/buttonColor" />
        <!--balance card view-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="50dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/userName"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            app:layout_goneMarginTop="35dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/homescreen_cardview_background"
                android:elevation="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:text="Current Balance"
                    android:textColor="@color/white"
                    android:textSize="15sp"

                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/balanceAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/open_sans_medium"
                    android:text="@string/amountInRupee"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
        <!--card view for showing expenses - charts-->

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_medium"
            android:gravity="center"
            android:text="Your Spends"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@id/cardView" />


        <androidx.cardview.widget.CardView
            android:id="@+id/monthlyBudgetCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="@id/cardView"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/monthlyDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/open_sans_medium"
                    android:text="@string/monthlyDuration"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/monthlyExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/open_sans_medium"
                    android:text="@string/amountInRupee"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/monthlyDuration"
                    app:layout_constraintTop_toBottomOf="@id/monthlyDuration" />

                <TextView
                    android:id="@+id/userBudget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/open_sans_medium"
                    android:text="/₹4000"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/monthlyExpense"
                    app:layout_constraintTop_toBottomOf="@id/monthlyDuration" />

                <TextView
                    android:id="@+id/expensePercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/open_sans_medium"
                    android:text="@string/percentageBudget"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pieChart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.789"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/monthlyExpense"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/checkDetailedAnalysisBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="5dp"
                    android:text="See Expense Summary"
                    android:textAllCaps="false"
                    android:textColor="@color/buttonColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pieChart" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/seeMoreActionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="See More"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/monthlyBudgetCard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="Recent Transactions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/monthlyBudgetCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>